<resources>
	<string name="bundesliga_name">Bundesliga</string>
	<string name="serie_a_name">Serie A</string>
	<string name="player_analytic_url">http://analyze.starcloud.link:9537/player</string>
    <string name="paga_url">http://tenbre.me/portal/pay/paga.html</string>
    <string name="faq_url">/forum/faq/faq_list.html</string>
    <string name="app_name">StarTimes</string>
    <string name="facebook_app_name">tenbre</string>
    <string name="app_id">720428864711530</string>
    <string name="action_settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="fragment_tag_Home">Home</string>
    <string name="fragment_tag_Me">Me</string>
    <string name="fragment_tag_epgDetail">Program Detail</string>
    <string name="fragment_tag_onAir">On Air</string>
    <string name="fragment_tag_channelGuide">Channel Guide</string>
    <string name="fragment_tag_chatRooms">Chat Rooms</string>
    <string name="fragment_tag_video">Live &amp; Video</string>
    <string name="tag_video_list">Video List</string>
    <string name="activity_allchannels_title">All Channels</string>
    <string name="activity_alertsetting_title">Reminder Setting</string>
    <string name="activity_alertlist_title">My Reminders</string>
     <string name="activity_forum_title">Forum</string>
    <string name="text_whathot">What\'s Hot!</string>
    <string name="text_more">More</string>
    <string name="comment_more">Group Vine</string>
    <string name="text_onair_now">NOW</string>
    <string name="text_onair_next">NEXT</string>
    <string name="search_title">Search</string>
    <string name="task_title">Tasks</string>
    <string name="all_comments_title">All Comments</string>
    <string name="qyou_comments_title">Qyou Comments</string>
    <string name="str_yearago">years ago</string>
    <string name="share_epg">I love this and you got see it!</string>
    <string name="str_monthago">months ago</string>
    <string name="str_daysago">day</string>
    <string name="str_hoursago">h</string>
    <string name="str_minsago">min</string>
    <string name="str_secondago">seconds ago</string>
    <string name="go">Go</string>
    <string name="email_phone">Email/%1$s-digit phone number</string>
    <string name="email_add">Email</string>
    <string name="login_input_user">Email/Phone Number</string>
    <string name="pwd">Password</string>
    <string name="comfim_pwd">Confirm Password</string>
    <string name="inivated_hin">Invitation code (Not necessary)</string>
    <string name="invitation_code">Invitation code</string>
    <string name="invititions">Invitation</string>
    <string name="MyReminders">My Reminders</string>
    <string name="ReminderNotification">Reminder notification</string>
    <string name="login_btn">Sign in</string>
    <string name="register_btn">Register</string>
    <string name="already">Already Registered</string>
    <string name="choose_area">Choose your country area:</string>
    <string name="next">Next</string>
    <string name="have_account">Already have an account?</string>
    <string name="login_title">Login</string>
    <string name="reg_title">Register</string>
    <string name="reg_later_btn">Register Later</string>
    <string name="skip">Skip</string>
    <string name="sig_in_btn">Sign ln</string>
    <string name="nick_name">Nickname</string>
    <string name="nick">Nick</string>
    <string name="sex">Male</string>
    <string name="name">Nick name</string>
    <string name="alerts">Alerts</string>
    <string name="search">Search...</string>
    <string name="tv_info">Info</string>
    <string name="ad">+</string>
    <string name="leave_comment">Leave a comment..</string>
    <string name="leave_msg">Leave your message</string>
    <string name="forward_link">What is this App for?</string>
    <string name="forward_text">Send to:</string>
    <string name="or">OR</string>
    <string name="program_dital">Program Detail</string>
    <string name="star_coins">Star Coins</string>
    <string name="startimes_vip">StarTimes VIP</string>
    <string name="recharge">Recharge</string>
    <string name="transfer">Transfer</string>
    <string name="star_smartcard">StarTimes Smartcard</string>
    <string name="me_lonin">Login</string>
    <string name="please_select">Please select</string>
    <string name="smart_card">SmartCard :</string>
    <string name="vouch_no">Vouch No.</string>
    <string name="pin_number">PIN No.</string>
    <string name="confirm">Confirm</string>
    <string name="ok">OK</string>
    <string name="reset_password">Reset Password</string>
    <string name="smart_no">Please enter smart card number</string>
    <string name="stb_code">Find the 6 digits as shown in the picture</string>
    <string name="topup_activity_title">Recharge</string>
    <string name="smart_card_activity_title">StarTimes Smart Card</string>
    <string name="feedback">Feedback</string>
    <string name="tenb">My Feeds</string>
    <string name="new_pass">New Password</string>
    <string name="confirm_new_pass">Confirm New Password</string>
    <string name="reset_pass">Reset Password</string>
    <string name="reset_nike_name">Nickname :</string>
    <string name="reset_email">Email :</string>
    <string name="send_email">Send Email</string>
    <string name="forget_password">Forget Password</string>
    <string name="other_account">Sign-in with other accounts</string>
    <string name="pease_account">Please use the registered email account</string>
    <string name="my_wallet">My wallet</string>
    <string name="earn_more_coins">Earn more coins</string>
    <string name="my_coupons">My Coupons</string>
	<string name="coupons">Coupons</string>
    <string name="rewards">Rewards</string>
    <string name="conform_to_exchange">Confirm to Exchange</string>
    <string name="expiration_date">Expiration Date:</string>
    <string name="exchange_no">Exchange No:\n</string>
    <string name="go_to_check_coupon">Go to check coupon</string>
    <string name="my_coupons_title">My coupons</string>
    <string name="reward_detail_title">Reward Detail</string>
    <string name="reward_title">Spend Coins</string>
    <string name="send_btn">SEND</string>
    <string name="fast_user_report">Fast User Report</string>
    <string name="update_notisfy">Update Notification</string>
    <string name="update">Update</string>
    <string name="select">Select</string>
    <string name="leave_your_precious_advice">Leave your precious advice</string>
    <string name="cannot_alert">It\'s on air. You can watch it on your TV right now!</string>
    <string name="cannot_cancel_alert">Cancellation of the alert is invalid now!</string>
    <string name="user_report_title">Can we take you just 1 minute to finish this quick survey and help us improve StarTimes App?</string>
    <string name="bouque">Basic Bouquet:</string>
    <string name="validity">Validity:</string>
    <string name="account_balance">Account:</string>
    <string name="currency">₦</string>
    <string name="no">No.</string>
    <string name="four_layer_notify_title">The next update is up to you!</string>
    <string name="four_layer_notify_content">Write a fast user report,and gain coins.</string>
    <string name="four_layer_dialog_content">You have experineced main updates of this version.Do you like it?</string>
    <string name="four_layer_time">15:00</string>
    <string name="egg_alert_time">11:00</string>
    <string name="focebook">Focebook</string>
    <string name="twitter">Twitter</string>
    <string name="current_password">Current Password</string>
    <string name="current_version_title">Current Version</string>
    <string name="new_version_title">New Version</string>
    <string name="guide_number">3</string>
    <string name="user_info">userInfo</string>
    <string name="update_information">Update Information</string>
    <string name="inforamtion">Information</string>
    <string name="title_save">Save</string>
    <string name="sex_man">Male</string>
    <string name="sex_woman">Female</string>
    <string name="sex_defalut">Not Specified</string>
    <string name="need_more_coins">Need More Coins</string>
    <string name="alpha">Alpha test promotion! Double coins!</string>
    <string name="egg_share">Invite friends and get coupons!</string>
    <string name="refresh">Click refresh</string>
    <string name="explore_more">Explore More</string>
    <string name="comment">Comments</string>
    <string name="related">Related Videos</string>
    <string name="star_times_smart_card">StarTimes smart card number</string>
    <string name="notice">Notice: one smartcard can only be bound up to 10 different accounts.</string>
    <string name="example">Example:The number in the red rectangular box.</string>
    <string name="stb_code_last_four"> Last 6 digits of your decoder serial number</string>
    <string name="quit_again_click">Press again to exit!</string>
    <string name="share_text">I love this and you gotta see it!</string>
    <string name="cancel">CANCEL</string>
    <string name="edit">Edit</string>
    <string name="confirm_to_recharge">Confirm to recharge</string>
    <string name="fragment_tag_ccount_manager">Smart card</string>
    <string name="discobery_tag_fragment">Discover</string>
    <string name="startimes_business_hall_or_call">Please visit StarTimes business hall or call us</string>
    <string name="twenty_four">(+234)094618888</string>
    <string name="thirteen">(+234)014618888</string>
    <string name="smart_card_recharge">Smart Card Recharge</string>
    <string name="my_smart_card">My Smart Card</string>
    <string name="pay_title">Pay with paga</string>
	<string name="five_min">5min</string>
	<string name="ten_min">10min</string>
	<string name="fifteen_min">15min</string>
	<string name="thirty_min">30min</string>
    <string name="ppv">PPV</string>
    <string name="ppv_promotion">!!Promotion!!</string>
    <string name="ppv_promotion_message">We are offering all doe customers a chance to watch a one month free of PPV program.Hurry up and experience it.</string>
    <string name="error_network">Internet server unavailable, please try later.</string>
    <string name="player_first_time_msg">StarTimes video player uses the most advanced encode technology. Compared with Youtube, it only costs 1/3 data.</string>
    <string name="live_video_not_yet_begin">Available at</string>
    <string name="live_video_ended">Oops, already ended.</string>
    <string name="email_address_can_not_be_empty">Email address can not be empty</string>
    <string name="recharge_card_info">Please enter the number of your recharge card</string>
    <string name="you_can">You can buy the recharge card in StarTimes sales outlet.</string>
    <string name="recharge_card">Recharge card </string>
    <string name="not_specified">Not Specified</string>
    <string name="Male">Male</string>
    <string name="Female">Female</string>
    <string name="recharge_limit">You have choosen a %1$s coupon.\nIt will be available when you recharge more than %2$s.</string>
    <string name="setting">Setting</string>
    <string name="invita_one">This is your invitation code.Invite your friends to register StarTimes App as following steps,both of you will get a %1s coupon for instant recharge.</string>
    <string name="step_one">STEP 1:</string>
    <string name="step_one_txt">Tell your invitation code to your friend</string>
    <string name="step_two">STEP 2:</string>
    <string name="step_three">STEP 3:</string>
    <string name="step_three_txt">Let your friend enter your invitation code on phone registration page</string>
    <string name="step_four">STEP 4:</string>
    <string name="step_four_txt">Get coupon for instant recharge</string>
    <string name="quality">Quality</string>
    <string name="normal">Normal-30KB/s</string>
    <string name="low">Low-15KB/s</string>
    <string name="apply">Apply</string>
</resources>