<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/video_quality_ll"
    android:background="@color/white"
    android:orientation="vertical" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="24dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/setting"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="24dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/quality"
        android:textColor="@color/gray_bg"
        android:textSize="18sp" />

    <RelativeLayout
        android:id="@+id/video_quality_normal_rl"
        android:layout_width="match_parent"
        android:layout_height="24dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/video_quality_bg" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="24dp"
            android:text="@string/normal"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/video_quality_normal_iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="16dp"
            android:src="@drawable/icon_check_circle_orange"
            android:visibility="gone" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/video_quality_low_rl"
        android:layout_width="match_parent"
        android:layout_height="24dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/video_quality_bg" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="24dp"
            android:text="@string/low"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/video_quality_low_iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="16dp"
            android:src="@drawable/icon_check_circle_orange"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <TextView
            android:id="@+id/video_quality_apply_tv"
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="16dp"
            android:layout_marginRight="16dp"
            android:text="@string/apply"
            android:textColor="@color/orange_red"
            android:textSize="18sp"
            android:textStyle="bold" />
    </RelativeLayout>

</LinearLayout>