<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/list_bg"
    android:orientation="vertical"
    android:padding="20dp" >

    <RelativeLayout
        android:id="@+id/rl_recharge"
        android:layout_width="match_parent"
        android:layout_height="40dp" >

        <ImageView
            android:id="@+id/iv_recharge_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:background="@drawable/icon_choose_report" />

        <TextView
            android:id="@+id/tv_recharge_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@id/iv_recharge_btn"
            android:text="@string/recharge_card"
            android:textColor="@color/choose_text"
            android:textSize="18sp" />
    </RelativeLayout>

    <EditText
        android:id="@+id/et_recharge_no"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:layout_marginBottom="@dimen/dp_20"
        android:layout_marginTop="10dp"
        android:background="@drawable/info_frame"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:hint="@string/vouch_no"
        android:inputType="number"
        android:paddingLeft="@dimen/dp_10"
        android:singleLine="true"
        android:textColor="#545454"
        android:textColorHint="#B0B0B0" />

    <TextView
        android:id="@+id/tv_recharge_limit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:text="@string/recharge_limit"
        android:textColor="#D0021B"
        android:textSize="14sp"
        android:visibility="gone" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <Button
        android:id="@+id/btn_recharge_sc"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/dp_50"
        android:layout_marginBottom="30dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/need_more_coins_button"
        android:padding="0dp"
        android:text="@string/confirm_to_recharge"
        android:textColor="@color/white"
        android:textSize="20sp" />

</LinearLayout>