<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <LinearLayout
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:background="@drawable/propmt_dialog_bg" >
        
        <RelativeLayout 
            android:layout_marginTop="24dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginBottom="24dp"
            >
            <TextView 
		    android:id="@+id/select_specified"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_marginLeft="16dp"
		    android:text="@string/not_specified"
		    android:textSize="20sp"
		     android:background="@drawable/selectd_dialog_btn_bg"
		    />
              <TextView 
		    android:id="@+id/select_Male"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_marginLeft="16dp"
		    android:text="@string/Male"
		    android:textSize="20sp"
		    android:layout_marginTop="16dp"
		    android:layout_below="@id/select_specified"
		    android:background="@drawable/selectd_dialog_btn_bg"
		    />
            <TextView 
		    android:id="@+id/select_Female"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_marginLeft="16dp"
		    android:text="@string/Female"
		    android:textSize="20sp"
		    android:layout_marginTop="16dp"
		    android:layout_below="@id/select_Male"
		    android:background="@drawable/selectd_dialog_btn_bg"
		    />
            
        </RelativeLayout>
		
    </LinearLayout>

</RelativeLayout>